functionreader/myparser/parser.output
Grammar

    0 $accept: prog $end

    1 prog: header var_section body_section

    2 header: PROGRAMM STRING ';' ENDLS

    3 var_section: VAR var_lines

    4 var_lines: var_line
    5          | var_lines var_line

    6 var_line: vars ':' FUNCTIONTYPE '(' args ')' ';' ENDLS
    7         | vars ':' DOUBLETYPE ';' ENDLS
    8         | vars ':' DOMAINTYPE ';' ENDLS
    9         | vars ':' INTTYPE ';' ENDLS

   10 args: STRING
   11     | args ',' STRING

   12 vars: STRING
   13     | vars ',' STRING

   14 body_section: START body_lines footer

   15 body_lines: body_line
   16           | body_lines body_line

   17 body_line: STRING ":=" FUNCTIONVAL ';' ENDLS
   18          | STRING ":=" DOUBLEVAL ';' ENDLS
   19          | STRING ":=" INTVAL ';' ENDLS
   20          | STRING DOML ":=" DOUBLEVAL ';' ENDLS
   21          | STRING DOMR ":=" DOUBLEVAL ';' ENDLS
   22          | STRING ":=" STRING '(' STRING ',' STRING ',' STRING ',' STRING ',' STRING ')' ';' ENDLS

   23 footer: END ENDLS

   24 ENDLS: ENDL
   25      | ENDLS ENDL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 6 22
')' (41) 6 22
',' (44) 11 13 22
':' (58) 6 7 8 9
';' (59) 2 6 7 8 9 17 18 19 20 21 22
error (256)
PROGRAMM (258) 2
VAR (259) 3
START (260) 14
END (261) 23
FUNCTIONTYPE (262) 6
DOUBLETYPE (263) 7
DOMAINTYPE (264) 8
INTTYPE (265) 9
ENDL (266) 24 25
DOML (267) 20
DOMR (268) 21
INTVAL (269) 19
DOUBLEVAL (270) 18 20 21
STRING (271) 2 10 11 12 13 17 18 19 20 21 22
FUNCTIONVAL (272) 17
":=" (273) 17 18 19 20 21 22


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
prog (25)
    on left: 1, on right: 0
header (26)
    on left: 2, on right: 1
var_section (27)
    on left: 3, on right: 1
var_lines (28)
    on left: 4 5, on right: 3 5
var_line (29)
    on left: 6 7 8 9, on right: 4 5
args (30)
    on left: 10 11, on right: 6 11
vars (31)
    on left: 12 13, on right: 6 7 8 9 13
body_section (32)
    on left: 14, on right: 1
body_lines (33)
    on left: 15 16, on right: 14 16
body_line (34)
    on left: 17 18 19 20 21 22, on right: 15 16
footer (35)
    on left: 23, on right: 14
ENDLS (36)
    on left: 24 25, on right: 2 6 7 8 9 17 18 19 20 21 22 23 25


State 0

    0 $accept: . prog $end

    PROGRAMM  shift, and go to state 1

    prog    go to state 2
    header  go to state 3


State 1

    2 header: PROGRAMM . STRING ';' ENDLS

    STRING  shift, and go to state 4


State 2

    0 $accept: prog . $end

    $end  shift, and go to state 5


State 3

    1 prog: header . var_section body_section

    VAR  shift, and go to state 6

    var_section  go to state 7


State 4

    2 header: PROGRAMM STRING . ';' ENDLS

    ';'  shift, and go to state 8


State 5

    0 $accept: prog $end .

    $default  accept


State 6

    3 var_section: VAR . var_lines

    STRING  shift, and go to state 9

    var_lines  go to state 10
    var_line   go to state 11
    vars       go to state 12


State 7

    1 prog: header var_section . body_section

    START  shift, and go to state 13

    body_section  go to state 14


State 8

    2 header: PROGRAMM STRING ';' . ENDLS

    ENDL  shift, and go to state 15

    ENDLS  go to state 16


State 9

   12 vars: STRING .

    $default  reduce using rule 12 (vars)


State 10

    3 var_section: VAR var_lines .
    5 var_lines: var_lines . var_line

    STRING  shift, and go to state 9

    $default  reduce using rule 3 (var_section)

    var_line  go to state 17
    vars      go to state 12


State 11

    4 var_lines: var_line .

    $default  reduce using rule 4 (var_lines)


State 12

    6 var_line: vars . ':' FUNCTIONTYPE '(' args ')' ';' ENDLS
    7         | vars . ':' DOUBLETYPE ';' ENDLS
    8         | vars . ':' DOMAINTYPE ';' ENDLS
    9         | vars . ':' INTTYPE ';' ENDLS
   13 vars: vars . ',' STRING

    ':'  shift, and go to state 18
    ','  shift, and go to state 19


State 13

   14 body_section: START . body_lines footer

    STRING  shift, and go to state 20

    body_lines  go to state 21
    body_line   go to state 22


State 14

    1 prog: header var_section body_section .

    $default  reduce using rule 1 (prog)


State 15

   24 ENDLS: ENDL .

    $default  reduce using rule 24 (ENDLS)


State 16

    2 header: PROGRAMM STRING ';' ENDLS .
   25 ENDLS: ENDLS . ENDL

    ENDL  shift, and go to state 23

    $default  reduce using rule 2 (header)


State 17

    5 var_lines: var_lines var_line .

    $default  reduce using rule 5 (var_lines)


State 18

    6 var_line: vars ':' . FUNCTIONTYPE '(' args ')' ';' ENDLS
    7         | vars ':' . DOUBLETYPE ';' ENDLS
    8         | vars ':' . DOMAINTYPE ';' ENDLS
    9         | vars ':' . INTTYPE ';' ENDLS

    FUNCTIONTYPE  shift, and go to state 24
    DOUBLETYPE    shift, and go to state 25
    DOMAINTYPE    shift, and go to state 26
    INTTYPE       shift, and go to state 27


State 19

   13 vars: vars ',' . STRING

    STRING  shift, and go to state 28


State 20

   17 body_line: STRING . ":=" FUNCTIONVAL ';' ENDLS
   18          | STRING . ":=" DOUBLEVAL ';' ENDLS
   19          | STRING . ":=" INTVAL ';' ENDLS
   20          | STRING . DOML ":=" DOUBLEVAL ';' ENDLS
   21          | STRING . DOMR ":=" DOUBLEVAL ';' ENDLS
   22          | STRING . ":=" STRING '(' STRING ',' STRING ',' STRING ',' STRING ',' STRING ')' ';' ENDLS

    DOML  shift, and go to state 29
    DOMR  shift, and go to state 30
    ":="  shift, and go to state 31


State 21

   14 body_section: START body_lines . footer
   16 body_lines: body_lines . body_line

    END     shift, and go to state 32
    STRING  shift, and go to state 20

    body_line  go to state 33
    footer     go to state 34


State 22

   15 body_lines: body_line .

    $default  reduce using rule 15 (body_lines)


State 23

   25 ENDLS: ENDLS ENDL .

    $default  reduce using rule 25 (ENDLS)


State 24

    6 var_line: vars ':' FUNCTIONTYPE . '(' args ')' ';' ENDLS

    '('  shift, and go to state 35


State 25

    7 var_line: vars ':' DOUBLETYPE . ';' ENDLS

    ';'  shift, and go to state 36


State 26

    8 var_line: vars ':' DOMAINTYPE . ';' ENDLS

    ';'  shift, and go to state 37


State 27

    9 var_line: vars ':' INTTYPE . ';' ENDLS

    ';'  shift, and go to state 38


State 28

   13 vars: vars ',' STRING .

    $default  reduce using rule 13 (vars)


State 29

   20 body_line: STRING DOML . ":=" DOUBLEVAL ';' ENDLS

    ":="  shift, and go to state 39


State 30

   21 body_line: STRING DOMR . ":=" DOUBLEVAL ';' ENDLS

    ":="  shift, and go to state 40


State 31

   17 body_line: STRING ":=" . FUNCTIONVAL ';' ENDLS
   18          | STRING ":=" . DOUBLEVAL ';' ENDLS
   19          | STRING ":=" . INTVAL ';' ENDLS
   22          | STRING ":=" . STRING '(' STRING ',' STRING ',' STRING ',' STRING ',' STRING ')' ';' ENDLS

    INTVAL       shift, and go to state 41
    DOUBLEVAL    shift, and go to state 42
    STRING       shift, and go to state 43
    FUNCTIONVAL  shift, and go to state 44


State 32

   23 footer: END . ENDLS

    ENDL  shift, and go to state 15

    ENDLS  go to state 45


State 33

   16 body_lines: body_lines body_line .

    $default  reduce using rule 16 (body_lines)


State 34

   14 body_section: START body_lines footer .

    $default  reduce using rule 14 (body_section)


State 35

    6 var_line: vars ':' FUNCTIONTYPE '(' . args ')' ';' ENDLS

    STRING  shift, and go to state 46

    args  go to state 47


State 36

    7 var_line: vars ':' DOUBLETYPE ';' . ENDLS

    ENDL  shift, and go to state 15

    ENDLS  go to state 48


State 37

    8 var_line: vars ':' DOMAINTYPE ';' . ENDLS

    ENDL  shift, and go to state 15

    ENDLS  go to state 49


State 38

    9 var_line: vars ':' INTTYPE ';' . ENDLS

    ENDL  shift, and go to state 15

    ENDLS  go to state 50


State 39

   20 body_line: STRING DOML ":=" . DOUBLEVAL ';' ENDLS

    DOUBLEVAL  shift, and go to state 51


State 40

   21 body_line: STRING DOMR ":=" . DOUBLEVAL ';' ENDLS

    DOUBLEVAL  shift, and go to state 52


State 41

   19 body_line: STRING ":=" INTVAL . ';' ENDLS

    ';'  shift, and go to state 53


State 42

   18 body_line: STRING ":=" DOUBLEVAL . ';' ENDLS

    ';'  shift, and go to state 54


State 43

   22 body_line: STRING ":=" STRING . '(' STRING ',' STRING ',' STRING ',' STRING ',' STRING ')' ';' ENDLS

    '('  shift, and go to state 55


State 44

   17 body_line: STRING ":=" FUNCTIONVAL . ';' ENDLS

    ';'  shift, and go to state 56


State 45

   23 footer: END ENDLS .
   25 ENDLS: ENDLS . ENDL

    ENDL  shift, and go to state 23

    $default  reduce using rule 23 (footer)


State 46

   10 args: STRING .

    $default  reduce using rule 10 (args)


State 47

    6 var_line: vars ':' FUNCTIONTYPE '(' args . ')' ';' ENDLS
   11 args: args . ',' STRING

    ')'  shift, and go to state 57
    ','  shift, and go to state 58


State 48

    7 var_line: vars ':' DOUBLETYPE ';' ENDLS .
   25 ENDLS: ENDLS . ENDL

    ENDL  shift, and go to state 23

    $default  reduce using rule 7 (var_line)


State 49

    8 var_line: vars ':' DOMAINTYPE ';' ENDLS .
   25 ENDLS: ENDLS . ENDL

    ENDL  shift, and go to state 23

    $default  reduce using rule 8 (var_line)


State 50

    9 var_line: vars ':' INTTYPE ';' ENDLS .
   25 ENDLS: ENDLS . ENDL

    ENDL  shift, and go to state 23

    $default  reduce using rule 9 (var_line)


State 51

   20 body_line: STRING DOML ":=" DOUBLEVAL . ';' ENDLS

    ';'  shift, and go to state 59


State 52

   21 body_line: STRING DOMR ":=" DOUBLEVAL . ';' ENDLS

    ';'  shift, and go to state 60


State 53

   19 body_line: STRING ":=" INTVAL ';' . ENDLS

    ENDL  shift, and go to state 15

    ENDLS  go to state 61


State 54

   18 body_line: STRING ":=" DOUBLEVAL ';' . ENDLS

    ENDL  shift, and go to state 15

    ENDLS  go to state 62


State 55

   22 body_line: STRING ":=" STRING '(' . STRING ',' STRING ',' STRING ',' STRING ',' STRING ')' ';' ENDLS

    STRING  shift, and go to state 63


State 56

   17 body_line: STRING ":=" FUNCTIONVAL ';' . ENDLS

    ENDL  shift, and go to state 15

    ENDLS  go to state 64


State 57

    6 var_line: vars ':' FUNCTIONTYPE '(' args ')' . ';' ENDLS

    ';'  shift, and go to state 65


State 58

   11 args: args ',' . STRING

    STRING  shift, and go to state 66


State 59

   20 body_line: STRING DOML ":=" DOUBLEVAL ';' . ENDLS

    ENDL  shift, and go to state 15

    ENDLS  go to state 67


State 60

   21 body_line: STRING DOMR ":=" DOUBLEVAL ';' . ENDLS

    ENDL  shift, and go to state 15

    ENDLS  go to state 68


State 61

   19 body_line: STRING ":=" INTVAL ';' ENDLS .
   25 ENDLS: ENDLS . ENDL

    ENDL  shift, and go to state 23

    $default  reduce using rule 19 (body_line)


State 62

   18 body_line: STRING ":=" DOUBLEVAL ';' ENDLS .
   25 ENDLS: ENDLS . ENDL

    ENDL  shift, and go to state 23

    $default  reduce using rule 18 (body_line)


State 63

   22 body_line: STRING ":=" STRING '(' STRING . ',' STRING ',' STRING ',' STRING ',' STRING ')' ';' ENDLS

    ','  shift, and go to state 69


State 64

   17 body_line: STRING ":=" FUNCTIONVAL ';' ENDLS .
   25 ENDLS: ENDLS . ENDL

    ENDL  shift, and go to state 23

    $default  reduce using rule 17 (body_line)


State 65

    6 var_line: vars ':' FUNCTIONTYPE '(' args ')' ';' . ENDLS

    ENDL  shift, and go to state 15

    ENDLS  go to state 70


State 66

   11 args: args ',' STRING .

    $default  reduce using rule 11 (args)


State 67

   20 body_line: STRING DOML ":=" DOUBLEVAL ';' ENDLS .
   25 ENDLS: ENDLS . ENDL

    ENDL  shift, and go to state 23

    $default  reduce using rule 20 (body_line)


State 68

   21 body_line: STRING DOMR ":=" DOUBLEVAL ';' ENDLS .
   25 ENDLS: ENDLS . ENDL

    ENDL  shift, and go to state 23

    $default  reduce using rule 21 (body_line)


State 69

   22 body_line: STRING ":=" STRING '(' STRING ',' . STRING ',' STRING ',' STRING ',' STRING ')' ';' ENDLS

    STRING  shift, and go to state 71


State 70

    6 var_line: vars ':' FUNCTIONTYPE '(' args ')' ';' ENDLS .
   25 ENDLS: ENDLS . ENDL

    ENDL  shift, and go to state 23

    $default  reduce using rule 6 (var_line)


State 71

   22 body_line: STRING ":=" STRING '(' STRING ',' STRING . ',' STRING ',' STRING ',' STRING ')' ';' ENDLS

    ','  shift, and go to state 72


State 72

   22 body_line: STRING ":=" STRING '(' STRING ',' STRING ',' . STRING ',' STRING ',' STRING ')' ';' ENDLS

    STRING  shift, and go to state 73


State 73

   22 body_line: STRING ":=" STRING '(' STRING ',' STRING ',' STRING . ',' STRING ',' STRING ')' ';' ENDLS

    ','  shift, and go to state 74


State 74

   22 body_line: STRING ":=" STRING '(' STRING ',' STRING ',' STRING ',' . STRING ',' STRING ')' ';' ENDLS

    STRING  shift, and go to state 75


State 75

   22 body_line: STRING ":=" STRING '(' STRING ',' STRING ',' STRING ',' STRING . ',' STRING ')' ';' ENDLS

    ','  shift, and go to state 76


State 76

   22 body_line: STRING ":=" STRING '(' STRING ',' STRING ',' STRING ',' STRING ',' . STRING ')' ';' ENDLS

    STRING  shift, and go to state 77


State 77

   22 body_line: STRING ":=" STRING '(' STRING ',' STRING ',' STRING ',' STRING ',' STRING . ')' ';' ENDLS

    ')'  shift, and go to state 78


State 78

   22 body_line: STRING ":=" STRING '(' STRING ',' STRING ',' STRING ',' STRING ',' STRING ')' . ';' ENDLS

    ';'  shift, and go to state 79


State 79

   22 body_line: STRING ":=" STRING '(' STRING ',' STRING ',' STRING ',' STRING ',' STRING ')' ';' . ENDLS

    ENDL  shift, and go to state 15

    ENDLS  go to state 80


State 80

   22 body_line: STRING ":=" STRING '(' STRING ',' STRING ',' STRING ',' STRING ',' STRING ')' ';' ENDLS .
   25 ENDLS: ENDLS . ENDL

    ENDL  shift, and go to state 23

    $default  reduce using rule 22 (body_line)
